2006-11-21  Akim Demaille  <demaille@gostai.com>

	Run reindent
	* include/urbi/uabstractclient.hh,
	* src/examples/monitor-win.cc, src/examples/monitor.cc,
	* src/examples/urbiballtrackinghead.cc,
	* src/examples/urbimirror.cc, src/examples/urbiping.cc,
	* src/examples/urbiplay.cc, src/examples/urbirecord.cc,
	* src/examples/urbisendbin.cc, src/examples/urbisendsound.cc,
	* src/examples/urbisound.cc, src/examples/urbitalkie.cc,
	* src/liburbi/swig/swig_ruby.hh,
	* src/liburbi/uabstractclient.cc, src/liburbi/uclient.cc,
	* src/liburbi/uobject/uvalue-common.cc,
	* src/liburbi/usyncclient.cc, src/utils/move.cc,
	* src/utils/urbicycle.cc, src/utils/urbireverse.cc,
	* src/utils/urbiscale.cc:
	Formatting changes.
	Parens simplifications.

2006-11-20  Akim Demaille  <akim.demaille@gmail.com>

	Coding style
	* include/urbi/uabstractclient.hh,
	* src/liburbi/uabstractclient.cc: White space changes.
	Ctor changes.

2006-11-13  Akim Demaille  <demaille@gostai.com>

	Update externals

2006-11-13  Akim Demaille  <demaille@gostai.com>

	Ctor should build in the same order as attribute declarations
	* include/urbi/uabstractclient.hh: Fix that.
	Formatting changes (run reindent).
	* include/urbi/usyncclient.hh: Comment changes.

2006-11-12  Razik Yousfi  <yousfi@gostai.com>

	* src/liburbi/uvar.hh,
	* src/liburbi/uvar.cc: Add of syncValue method used to synchronise
	the UVar's UValue.
	* src/examples/urbirecord.cc: Missing include.

2006-11-07  Akim Demaille  <akim.demaille@free.fr>

	Use reindent on the code
	* src/liburbi/usyncclient.cc: Formatting changes.
	* src/liburbi/uclient.cc: Ditto.
	* src/liburbi/uabstractclient.cc: Ditto.
	* src/liburbi/uconversion.cc: Ditto.

2006-11-07  Akim Demaille  <akim.demaille@free.fr>

	uobject.hh should not depend on config.h
	* src/liburbi/uobject/urbi/uobject.hh.template: Let libport stuff
	do it anyway.
	* src/liburbi/Makefile.am: Minor simplification.

2006-11-07  Akim Demaille  <akim.demaille@free.fr>

	urbi/uobject.hh