@@ -1,52 +1,0 @@
-#dont set prefix, umake will tell us this information
-PREFIX = @prefix@
-PACKAGE_BRAND = @PACKAGE_BRAND@
-URBI_ENV = @URBI_ENV@
-URBI_HOST = @URBI_HOST@
-branddir = @branddir@
-hostdir = @hostdir@
-envdir = @hostdir@/$(URBI_ENV)
-PTHREAD_CFLAGS = @PTHREAD_CFLAGS@
-PTHREAD_LIBS = @PTHREAD_LIBS@
-CC = @CC@
-CFLAGS = @CFLAGS@ $(PTHREAD_CFLAGS)
-CXXFLAGS = @CXXFLAGS@ $(PTHREAD_CFLAGS)
-CPP = @CPP@
-CPPFLAGS = @CPPFLAGS@ -I$(PREFIX)/include
-CXX = @CXX@
-LDFLAGS = @LDFLAGS@ $(PTHREAD_LIBS)
-LD = @CC@
-
-LIBTOOL = $(hostdir)/libtool
-LTOBJECTS = $(OBJECTS:%.o=%.lo)
-OUTBIN = nothing
-OUTLIB = nothing
-.SUFFIXES: .c .cc .cpp .lo .o .obj
-
-
-.c.lo: $(HEADERS) $(URBI_HOST).dep
-	$(LIBTOOL) --tag=C --mode=compile $(CC) $(CFLAGS) $(CPPFLAGS) $(EXTRACPPFLAGS) -c $< -o $@
-
-.cc.lo: $(HEADERS)
-	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(CXXFLAGS) $(CPPFLAGS) $(EXTRACPPFLAGS) -c $< -o $@
-
-.cpp.lo: $(HEADERS)
-	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(CXXFLAGS) $(CPPFLAGS) $(EXTRACPPFLAGS) -c $< -o $@
-
-#uobject target
-$(OUTLIB): $(LTOBJECTS) $(LIBS)
-	$(LIBTOOL) --mode=link --tag=CXX $(CXX) $(CXXFLAGS) $(LDFLAGS) -o $@ $(LTOBJECTS) $(LIBS) $(EXTRALDFLAGS)
-
-$(OUTBIN): $(LTOBJECTS) $(LIBS) 
-	$(LIBTOOL) --mode=link --tag=CXX $(CXX) $(CXXFLAGS) $(LDFLAGS) -o $@ $(OBJECTS) $(LIBS) $(EXTRALDFLAGS) $(envdir)/*.la
-
-
-#override default targets to add headers dependency
-.c.o: $(HEADERS) 
-	$(CC) $(CFLAGS) $(CPPFLAGS) $(EXTRACPPFLAGS) -c $< -o $@
-
-.cc.o: $(HEADERS) 
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) $(EXTRACPPFLAGS) -c $< -o $@
-
-.cpp.o: $(HEADERS) 
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) $(EXTRACPPFLAGS) -c $< -o $@
